--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="WallHaven.MainWindow"
+﻿<Window  x:Class="WallHaven.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WallHaven" 
-        mc:Ignorable="d" Background="Transparent"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
+        mc:Ignorable="d" Background="Transparent" MouseEnter="Window_MouseEnter" MouseLeave="Window_MouseLeave"
         WindowStartupLocation="CenterScreen" Closed="Window_Closed" HorizontalContentAlignment="Center"
         Title="WallHaven" Height="450" Width="800" Loaded="Window_Loaded">
+    <!--Style="{StaticResource StyleWindowUniversal}"-->
     <WindowChrome.WindowChrome>
         <WindowChrome
             CaptionHeight="20"
@@ -15,12 +16,15 @@
             GlassFrameThickness="-1"
             UseAeroCaptionButtons="True" />
     </WindowChrome.WindowChrome>
-    <Grid x:Name="ImageBackgroud" Background="Transparent" MouseWheel="ImageBackgroud_MouseWheel" Cursor="Hand">
+    <Grid x:Name="ImageBackgroud" Background="Transparent"  Cursor="Hand" 
+          MouseWheel="ImageBackgroud_MouseWheel" MouseLeftButtonUp="ImageBackgroud_MouseLeftButtonUp">
         <Grid.ContextMenu>
             <ContextMenu>
                 <MenuItem Name="MenuLast" Header="Last" IsEnabled="False" Click="MenuLast_Click"/>
                 <MenuItem Name="MenuNext" Header="Next" IsEnabled="False" Click="MenuNext_Click"/>
                 <MenuItem Name="MenuRefresh" Header="Refresh" Click="MenuRefresh_Click"/>
+                <Separator></Separator>
+                <MenuItem Name="MenuCopy" Header="Copy" IsEnabled="False" Click="MenuCopy_Click"/>
                 <Separator></Separator>
                 <MenuItem Name="MenuSaveAs" Header="SaveAs" IsEnabled="False" Click="MenuSaveAs_Click"/>
                 <MenuItem Name="MenuWallpaper" Header="Wallpaper" IsEnabled="False" Click="MenuWallpaper_Click">
@@ -31,7 +35,7 @@
                     <MenuItem Name="MenuWallpaperFit" Header="Fit" Tag="5"/>
                 </MenuItem>
                 <Separator></Separator>
-                <MenuItem Name="MenuInclude" Header="Include">
+                <MenuItem Name="MenuInclude" Header="Include" Click="MenuInclude_Click">
                     <MenuItem Name="MenuGeneral" IsCheckable="True" IsChecked="True" Header="General"/>
                     <MenuItem Name="MenuAnime"  IsCheckable="True" IsChecked="True" Header="Anime"/>
                     <MenuItem Name="MenuPeople"  IsCheckable="True" IsChecked="True" Header="People"/>
@@ -40,19 +44,27 @@
                     <MenuItem Name="MenuSketchy" IsCheckable="True" IsChecked="True" Header="Sketchy"/>
                     <MenuItem Name="MenuNSFW" IsCheckable="True" IsChecked="True" Header="NSFW"/>
                 </MenuItem>
-                <MenuItem Name="MenuSorting" Header="Sorting"  Click="MenuSorting_Click">
-                    <MenuItem Name="MenuDateAdded" IsCheckable="True" IsChecked="False" Header="DateAdded" Tag="1"/>
-                    <MenuItem Name="MenuRelevance"  IsCheckable="True" IsChecked="False" Header="Relevance" Tag="2"/>
-                    <MenuItem Name="MenuRandom"  IsCheckable="True" IsChecked="False" Header="Random" Tag="3"/>
-                    <MenuItem Name="MenuViews" IsCheckable="True" IsChecked="False" Header="Views" Tag="4"/>
-                    <MenuItem Name="MenuFavourites" IsCheckable="True" IsChecked="False" Header="Favourites" Tag="5"/>
-                    <MenuItem Name="MenuToplist" IsCheckable="True" IsChecked="False" Header="Toplist" Tag="6"/>
+                <MenuItem Name="MenuSorting" Header="Sorting" Click="MenuSorting_Click">
+                    <ui:RadioMenuItem Name="MenuDateAdded" IsCheckable="True" IsChecked="False" Header="DateAdded" Tag="1"/>
+                    <ui:RadioMenuItem Name="MenuRelevance"  IsCheckable="True" IsChecked="False" Header="Relevance" Tag="2"/>
+                    <ui:RadioMenuItem Name="MenuRandom"  IsCheckable="True" IsChecked="False" Header="Random" Tag="3"/>
+                    <ui:RadioMenuItem Name="MenuViews" IsCheckable="True" IsChecked="False" Header="Views" Tag="4"/>
+                    <ui:RadioMenuItem Name="MenuFavourites" IsCheckable="True" IsChecked="False" Header="Favourites" Tag="5"/>
+                    <ui:RadioMenuItem Name="MenuToplist" IsCheckable="True" IsChecked="False" Header="Toplist" Tag="6"/>
+                </MenuItem>
+                <MenuItem Name="MenuRatio" Header="Ratio" Click="MenuRatio_Click">
+                    <MenuItem Name="MenuWide" IsCheckable="True" IsChecked="False" Header="Wide"/>
+                    <MenuItem Name="MenuUltraWide"  IsCheckable="True" IsChecked="False" Header="UltraWide"/>
+                    <MenuItem Name="MenuPortrait"  IsCheckable="True" IsChecked="False" Header="Portrait"/>
+                    <MenuItem Name="MenuSquare" IsCheckable="True" IsChecked="False" Header="Square"/>
                 </MenuItem>
             </ContextMenu>
         </Grid.ContextMenu>
+        <Image x:Name="BackGround" Source="Resources/BlueGradients.bmp" Stretch="Fill"/>
         <Image x:Name="ImageDisplay" MouseLeftButtonDown="ImageDisplay_MouseLeftButtonDown"  MouseMove="ImageDisplay_MouseMove"
                    MouseLeftButtonUp="ImageDisplay_MouseLeftButtonUp"/>
         <Label x:Name="TipsPos" Height="30" Content="哈哈哈" Foreground="DeepPink"  VerticalAlignment="Center" HorizontalContentAlignment="Center"/>
+
         <!--<Border x:Name="ImageBackgroud" Background="Black" MouseWheel="ImageBackgroud_MouseWheel"  MouseMove="ImageBackgroud_MouseMove"  MouseUp="ImageBackgroud_MouseUp">
             <Image x:Name="ImageDisplay" Source="{Binding}">
                 <Image.RenderTransform>
@@ -62,5 +74,149 @@
                 </Image.RenderTransform>
             </Image>
         </Border>-->
+        <Border x:Name="BorderClose" Height="32" Width="48" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,5,0">
+            <Border x:Name="BorderCloseAnimation" BorderBrush="White" BorderThickness="2" CornerRadius="1" Width="12" Height="4" 
+                    Margin="0,0,0,0">
+                <Border.RenderTransform>
+                    <ScaleTransform ScaleX="1" CenterX="6"/>
+                </Border.RenderTransform>
+            </Border>
+        </Border>
+        <Border x:Name="BorderMax" Height="32" Width="46" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,53,0">
+            <Border x:Name="BorderMaxAnimation" BorderBrush="White" BorderThickness="2" CornerRadius="1" Width="12" Height="4" 
+                    Margin="0,0,0,0">
+                <Border.RenderTransform>
+                    <ScaleTransform ScaleX="1" CenterX="6"/>
+                </Border.RenderTransform>
+            </Border>
+        </Border>
+        <Border x:Name="BorderMin" Height="32" Width="48" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,99,0">
+            <Border x:Name="BorderMinAnimation" BorderBrush="White" BorderThickness="2" CornerRadius="1" Width="12" Height="4" 
+                    Margin="0,0,0,0">
+                <Border.RenderTransform>
+                    <ScaleTransform ScaleX="1" CenterX="6"/>
+                </Border.RenderTransform>
+            </Border>
+        </Border>
+        <Border x:Name="BoderSettingCtrlParent" Height="60" VerticalAlignment="Top" Background="Transparent"
+                MouseEnter="BoderSettingCtrlParent_MouseEnter" MouseLeave="BoderSettingCtrlParent_MouseLeave">
+            <Border x:Name="BoderSettingCtrl" Width="150" Height="20" CornerRadius="5" Background="#66000000" Margin="0,35,0,0" VerticalAlignment="Top" >
+                <Border.RenderTransform>
+                    <TranslateTransform Y="-55"/>
+                </Border.RenderTransform>
+                <Label MouseLeftButtonUp="ShowBorderSetting" Content="☆*: .｡. o(≧▽≦)o .｡.:*☆" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            </Border>
+        </Border>
+        <Border x:Name="BorderSetting" Background="#66000000" CornerRadius="8" Margin="0,40,0,0" Height="340" VerticalAlignment="Top" HorizontalAlignment="Center" Width="500">
+            <Border.RenderTransform>
+                <TranslateTransform Y="-380"/>
+            </Border.RenderTransform>
+            <Grid>
+                <ui:AppBarToggleButton Icon="Clear" Click="HideBorderSetting" HorizontalAlignment="Right" Margin="0,5,10,0" Width="40" Height="40">
+                    <ui:AppBarToggleButton.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"></Setter>
+                        </Style>
+                    </ui:AppBarToggleButton.Resources>
+                </ui:AppBarToggleButton>
+                <ui:SimpleStackPanel Orientation="Horizontal" Margin="10,10,10,0" Spacing="24" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center">
+                    <Label Content="Settings" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Cursor="Arrow"/>
+                </ui:SimpleStackPanel>
+                <ui:SimpleStackPanel Orientation="Horizontal" Margin="10,40,10,0" Spacing="24" Height="50" VerticalAlignment="Top" HorizontalAlignment="Center">
+                    <Label x:Name="SettingsAPITokenLabel" Content="APIToken" MouseLeftButtonUp="APIToken_MouseLeftButtonUp" ToolTip="https://wallhaven.cc/settings/account" HorizontalAlignment="Center" Width="80" VerticalAlignment="Center" HorizontalContentAlignment="Right"/>
+                    <TextBox x:Name="SettingsAPIToken" Height="30" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="270"/>
+
+                </ui:SimpleStackPanel>
+                <ui:SimpleStackPanel Orientation="Horizontal" Margin="10,90,10,0" Spacing="24" Height="90" VerticalAlignment="Top" HorizontalAlignment="Center">
+                    <Label Content="Include" HorizontalAlignment="Center" Width="80" VerticalAlignment="Top" HorizontalContentAlignment="Right" Margin="0,5,0,0" Cursor="Arrow"/>
+                    <ui:SimpleStackPanel Width="270">
+                        <ui:SimpleStackPanel Orientation="Horizontal" Spacing="24" Height="30" VerticalAlignment="Top">
+                            <ui:ToggleSwitch x:Name="SettingsIncludeGeneral" OnContent="General" OffContent="General" Width="125"></ui:ToggleSwitch>
+                            <ui:ToggleSwitch x:Name="SettingsIncludeSFW" OnContent="SFW" OffContent="SFW" Width="125"></ui:ToggleSwitch>
+                        </ui:SimpleStackPanel>
+                        <ui:SimpleStackPanel Orientation="Horizontal" Spacing="24" Height="30" VerticalAlignment="Top">
+                            <ui:ToggleSwitch x:Name="SettingsIncludeAnime" OnContent="Anime" OffContent="Anime" Width="125"></ui:ToggleSwitch>
+                            <ui:ToggleSwitch x:Name="SettingsIncludeSketchy" OnContent="Sketchy" OffContent="Sketchy" Width="125"></ui:ToggleSwitch>
+                        </ui:SimpleStackPanel>
+                        <ui:SimpleStackPanel Orientation="Horizontal" Spacing="24" Height="30" VerticalAlignment="Top">
+                            <ui:ToggleSwitch x:Name="SettingsIncludePeople" OnContent="People" OffContent="People" Width="125"></ui:ToggleSwitch>
+                            <ui:ToggleSwitch x:Name="SettingsIncludeNSFW" OnContent="NSFW" OffContent="NSFW" Width="125"></ui:ToggleSwitch>
+                        </ui:SimpleStackPanel>
+                    </ui:SimpleStackPanel>
+                </ui:SimpleStackPanel>
+                <ui:SimpleStackPanel Orientation="Horizontal" Margin="10,180,10,0" Spacing="24" Height="90" VerticalAlignment="Top" HorizontalAlignment="Center">
+                    <Label Content="Sorting" HorizontalAlignment="Center" Width="80" VerticalAlignment="Top" HorizontalContentAlignment="Right" Margin="0,5,0,0" Cursor="Arrow"/>
+                    <ui:SimpleStackPanel Width="270">
+                        <ui:SimpleStackPanel Orientation="Horizontal" Spacing="24" Height="30" VerticalAlignment="Top">
+                            <ui:ToggleSwitch x:Name="SettingsSortingDateAdded" Toggled="SettingsSorting_Indeterminate" Tag="1" OnContent="DateAdded" OffContent="DateAdded" Width="125"></ui:ToggleSwitch>
+                            <ui:ToggleSwitch x:Name="SettingsSortingRelevance" Toggled="SettingsSorting_Indeterminate" Tag="2" OnContent="Relevance" OffContent="Relevance" Width="125"></ui:ToggleSwitch>
+                        </ui:SimpleStackPanel>
+                        <ui:SimpleStackPanel Orientation="Horizontal" Spacing="24" Height="30" VerticalAlignment="Top">
+                            <ui:ToggleSwitch x:Name="SettingsSortingRandom" Toggled="SettingsSorting_Indeterminate" Tag="3" OnContent="Random" OffContent="Random" Width="125"></ui:ToggleSwitch>
+                            <ui:ToggleSwitch x:Name="SettingsSortingViews" Toggled="SettingsSorting_Indeterminate" Tag="4" OnContent="Views" OffContent="Views" Width="125"></ui:ToggleSwitch>
+                        </ui:SimpleStackPanel>
+                        <ui:SimpleStackPanel Orientation="Horizontal" Spacing="24" Height="30" VerticalAlignment="Top">
+                            <ui:ToggleSwitch x:Name="SettingsSortingFavourites" Toggled="SettingsSorting_Indeterminate" Tag="5" OnContent="Favourites" OffContent="Favourites" Width="125"></ui:ToggleSwitch>
+                            <ui:ToggleSwitch x:Name="SettingsSortingToplist" Toggled="SettingsSorting_Indeterminate" Tag="6" OnContent="Toplist" OffContent="Toplist" Width="125"></ui:ToggleSwitch>
+                        </ui:SimpleStackPanel>
+                    </ui:SimpleStackPanel>
+                </ui:SimpleStackPanel>
+                <ui:SimpleStackPanel Orientation="Horizontal" Margin="10,270,10,0" Spacing="24" Height="90" VerticalAlignment="Top" HorizontalAlignment="Center">
+                    <Label Content="Ratio" HorizontalAlignment="Center" Width="80" VerticalAlignment="Top" HorizontalContentAlignment="Right" Margin="0,5,0,0" Cursor="Arrow"/>
+                    <ui:SimpleStackPanel Width="270">
+                        <ui:SimpleStackPanel Orientation="Horizontal" Spacing="24" Height="30" VerticalAlignment="Top">
+                            <ui:ToggleSwitch x:Name="SettingsRatioWide" OnContent="Wide" OffContent="Wide" Width="125"></ui:ToggleSwitch>
+                            <ui:ToggleSwitch x:Name="SettingsRatioUltraWide" OnContent="UltraWide" OffContent="UltraWide" Width="125"></ui:ToggleSwitch>
+                        </ui:SimpleStackPanel>
+                        <ui:SimpleStackPanel Orientation="Horizontal" Spacing="24" Height="30" VerticalAlignment="Top">
+                            <ui:ToggleSwitch x:Name="SettingsRatioPortrait" OnContent="Portrait" OffContent="Portrait" Width="125"></ui:ToggleSwitch>
+                            <ui:ToggleSwitch x:Name="SettingsRatioSquare" OnContent="Square" OffContent="Square" Width="125"></ui:ToggleSwitch>
+                        </ui:SimpleStackPanel>
+                    </ui:SimpleStackPanel>
+                </ui:SimpleStackPanel>
+            </Grid>
+        </Border>
+
+        <Border x:Name="BoderDisplayParent" Width="160" HorizontalAlignment="Left" Background="Transparent"
+                MouseEnter="BoderDisplayParent_MouseEnter" MouseLeave="BoderDisplayParent_MouseLeave">
+            <Border.RenderTransform>
+                <TranslateTransform X="-100"/>
+            </Border.RenderTransform>
+            <Border x:Name="BoderDisplayCtrl" Width="150" Height="20" Margin="0,0,0,0" VerticalAlignment="Center" >
+                <Border.RenderTransform>
+                    <TranslateTransform X="-25"/>
+                </Border.RenderTransform>
+                <Border Margin="0,0,0,0" CornerRadius="5" Background="#66000000" >
+                    <Border.RenderTransform>
+                        <RotateTransform Angle="-90" CenterX="100" CenterY="0"/>
+                    </Border.RenderTransform>
+                    <Label MouseLeftButtonUp="ShowImageDisplay" Content="(*≧︶≦))(￣▽￣* )ゞ" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+                    </Label>
+                </Border>
+            </Border>
+        </Border>
+        <Border x:Name="BorderImages" Background="#66000000" CornerRadius="8" Margin="10,40,0,20" HorizontalAlignment="Left" Width="230"
+                MouseLeave="HideImageDisplay" MouseEnter="ShowImageDisplay">
+            <Border.RenderTransform>
+                <TranslateTransform X="-240"/>
+            </Border.RenderTransform>
+            <ListBox x:Name="ImagesDisplay" Margin="0">
+                <ListBox.Template>
+                    <ControlTemplate TargetType="{x:Type ListBox}">
+                        <ScrollViewer VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Disabled">
+                            <WrapPanel Margin="0" Orientation="Horizontal" IsItemsHost="True">
+                            </WrapPanel>
+                        </ScrollViewer>
+                    </ControlTemplate>
+                </ListBox.Template>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Border Margin="0" Width="90" Height="90" CornerRadius="5">
+                            <Image MouseLeftButtonUp="ImagesDisplay_MouseLeftButtonUp"  Source="{Binding Path=ThumbsUrl}" Tag="{Binding Path=Id}" Stretch="Fill"/>
+                        </Border>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Border>
     </Grid>
 </Window>
