--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,23 +1,14 @@
-﻿<Window  x:Class="WallHaven.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:ui="http://schemas.modernwpf.com/2019"
-        mc:Ignorable="d" Background="Transparent" MouseEnter="Window_MouseEnter" MouseLeave="Window_MouseLeave"
-        WindowStartupLocation="CenterScreen" Closed="Window_Closed" HorizontalContentAlignment="Center"
-        Title="WallHaven" Height="450" Width="800" Loaded="Window_Loaded">
+<Window x:Class="WallHaven.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.modernwpf.com/2019" mc:Ignorable="d" Background="Transparent" MouseEnter="Window_MouseEnter" MouseLeave="Window_MouseLeave" WindowStartupLocation="CenterScreen" Closed="Window_Closed" HorizontalContentAlignment="Center" Title="WallHaven" Height="450" Width="800" Loaded="Window_Loaded">
     <!--Style="{StaticResource StyleWindowUniversal}"-->
     <WindowChrome.WindowChrome>
-        <WindowChrome
-            CaptionHeight="20"
-            ResizeBorderThickness="8"
-            CornerRadius="8"
-            GlassFrameThickness="-1"
-            UseAeroCaptionButtons="True" />
+        <WindowChrome CaptionHeight="20" ResizeBorderThickness="8" CornerRadius="8" GlassFrameThickness="-1" UseAeroCaptionButtons="True" />
     </WindowChrome.WindowChrome>
-    <Grid x:Name="ImageBackgroud" Background="Transparent"  Cursor="Hand" 
-          MouseWheel="ImageBackgroud_MouseWheel" MouseLeftButtonUp="ImageBackgroud_MouseLeftButtonUp">
+    <Grid x:Name="ImageBackgroud" Background="Transparent" Cursor="Hand" MouseWheel="ImageBackgroud_MouseWheel" MouseLeftButtonUp="ImageBackgroud_MouseLeftButtonUp">
         <Grid.ContextMenu>
             <ContextMenu>
                 <MenuItem Name="MenuLast" Header="{DynamicResource last}" IsEnabled="False" Click="MenuLast_Click"/>
@@ -37,8 +28,8 @@
                 <Separator></Separator>
                 <MenuItem Name="MenuInclude" Header="{DynamicResource include}" Click="MenuInclude_Click">
                     <MenuItem Name="MenuGeneral" IsCheckable="True" IsChecked="True" Header="{DynamicResource general}"/>
-                    <MenuItem Name="MenuAnime"  IsCheckable="True" IsChecked="True" Header="{DynamicResource anime}"/>
-                    <MenuItem Name="MenuPeople"  IsCheckable="True" IsChecked="True" Header="{DynamicResource people}"/>
+                    <MenuItem Name="MenuAnime" IsCheckable="True" IsChecked="True" Header="{DynamicResource anime}"/>
+                    <MenuItem Name="MenuPeople" IsCheckable="True" IsChecked="True" Header="{DynamicResource people}"/>
                     <Separator></Separator>
                     <MenuItem Name="MenuSFW" IsCheckable="True" IsChecked="True" Header="SFW"/>
                     <MenuItem Name="MenuSketchy" IsCheckable="True" IsChecked="True" Header="Sketchy"/>
@@ -46,27 +37,26 @@
                 </MenuItem>
                 <MenuItem Name="MenuSorting" Header="{DynamicResource sorting}" Click="MenuSorting_Click">
                     <ui:RadioMenuItem Name="MenuDateAdded" IsCheckable="True" IsChecked="False" Header="{DynamicResource dateAdded}" Tag="1"/>
-                    <ui:RadioMenuItem Name="MenuRelevance"  IsCheckable="True" IsChecked="False" Header="{DynamicResource relevance}" Tag="2"/>
-                    <ui:RadioMenuItem Name="MenuRandom"  IsCheckable="True" IsChecked="False" Header="{DynamicResource random}" Tag="3"/>
+                    <ui:RadioMenuItem Name="MenuRelevance" IsCheckable="True" IsChecked="False" Header="{DynamicResource relevance}" Tag="2"/>
+                    <ui:RadioMenuItem Name="MenuRandom" IsCheckable="True" IsChecked="False" Header="{DynamicResource random}" Tag="3"/>
                     <ui:RadioMenuItem Name="MenuViews" IsCheckable="True" IsChecked="False" Header="{DynamicResource views}" Tag="4"/>
                     <ui:RadioMenuItem Name="MenuFavourites" IsCheckable="True" IsChecked="False" Header="{DynamicResource favourites}" Tag="5"/>
-					<ui:RadioMenuItem Name="MenuToplist" IsCheckable="True" IsChecked="False" Header="{DynamicResource toplist}" Tag="6"/>
-					<ui:RadioMenuItem Name="MenuHot" IsCheckable="True" IsChecked="False" Header="{DynamicResource hot}" Tag="6"/>
+                    <ui:RadioMenuItem Name="MenuToplist" IsCheckable="True" IsChecked="False" Header="{DynamicResource toplist}" Tag="6"/>
+                    <ui:RadioMenuItem Name="MenuHot" IsCheckable="True" IsChecked="False" Header="{DynamicResource hot}" Tag="6"/>
                 </MenuItem>
                 <MenuItem Name="MenuRatio" Header="{DynamicResource ratio}" Click="MenuRatio_Click">
                     <MenuItem Name="MenuWide" IsCheckable="True" IsChecked="False" Header="{DynamicResource wide}"/>
-                    <MenuItem Name="MenuUltraWide"  IsCheckable="True" IsChecked="False" Header="{DynamicResource ultraWide}"/>
-                    <MenuItem Name="MenuPortrait"  IsCheckable="True" IsChecked="False" Header="{DynamicResource portrait}"/>
+                    <MenuItem Name="MenuUltraWide" IsCheckable="True" IsChecked="False" Header="{DynamicResource ultraWide}"/>
+                    <MenuItem Name="MenuPortrait" IsCheckable="True" IsChecked="False" Header="{DynamicResource portrait}"/>
                     <MenuItem Name="MenuSquare" IsCheckable="True" IsChecked="False" Header="{DynamicResource square}"/>
                 </MenuItem>
             </ContextMenu>
         </Grid.ContextMenu>
         <Image x:Name="BackGround" Source="Resources/BlueGradients.bmp" Stretch="Fill"/>
-        <Image x:Name="ImageDisplay" MouseLeftButtonDown="ImageDisplay_MouseLeftButtonDown"  MouseMove="ImageDisplay_MouseMove"
-                   MouseLeftButtonUp="ImageDisplay_MouseLeftButtonUp"/>
-        <Label x:Name="TipsPos" Height="30" Content="" Foreground="DeepPink"  VerticalAlignment="Bottom" HorizontalContentAlignment="Center"/>
-
-        <!--<Border x:Name="ImageBackgroud" Background="Black" MouseWheel="ImageBackgroud_MouseWheel"  MouseMove="ImageBackgroud_MouseMove"  MouseUp="ImageBackgroud_MouseUp">
+        <Image x:Name="ImageDisplay" MouseLeftButtonDown="ImageDisplay_MouseLeftButtonDown" MouseMove="ImageDisplay_MouseMove" MouseLeftButtonUp="ImageDisplay_MouseLeftButtonUp"/>
+        <Label x:Name="TipsPos" Height="30" Width="80" Content="" Foreground="{StaticResource SystemControlBackgroundAccentBrush}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold"/>
+        <ui:ProgressRing x:Name="TipsRing" Height="80" Width="80"></ui:ProgressRing>
+        <!--<Border x:Name="ImageBackgroud" Background="Black" MouseWheel="ImageBackgroud_MouseWheel" MouseMove="ImageBackgroud_MouseMove" MouseUp="ImageBackgroud_MouseUp">
             <Image x:Name="ImageDisplay" Source="{Binding}">
                 <Image.RenderTransform>
                     <TransformGroup>
@@ -76,32 +66,28 @@
             </Image>
         </Border>-->
         <Border x:Name="BorderClose" Height="32" Width="48" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,5,0">
-            <Border x:Name="BorderCloseAnimation" BorderBrush="White" BorderThickness="2" CornerRadius="1" Width="12" Height="4" 
-                    Margin="0,0,0,0">
+            <Border x:Name="BorderCloseAnimation" BorderBrush="White" BorderThickness="2" CornerRadius="1" Width="12" Height="4" Margin="0,0,0,0">
                 <Border.RenderTransform>
                     <ScaleTransform ScaleX="1" CenterX="6"/>
                 </Border.RenderTransform>
             </Border>
         </Border>
         <Border x:Name="BorderMax" Height="32" Width="46" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,53,0">
-            <Border x:Name="BorderMaxAnimation" BorderBrush="White" BorderThickness="2" CornerRadius="1" Width="12" Height="4" 
-                    Margin="0,0,0,0">
+            <Border x:Name="BorderMaxAnimation" BorderBrush="White" BorderThickness="2" CornerRadius="1" Width="12" Height="4" Margin="0,0,0,0">
                 <Border.RenderTransform>
                     <ScaleTransform ScaleX="1" CenterX="6"/>
                 </Border.RenderTransform>
             </Border>
         </Border>
         <Border x:Name="BorderMin" Height="32" Width="48" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,99,0">
-            <Border x:Name="BorderMinAnimation" BorderBrush="White" BorderThickness="2" CornerRadius="1" Width="12" Height="4" 
-                    Margin="0,0,0,0">
+            <Border x:Name="BorderMinAnimation" BorderBrush="White" BorderThickness="2" CornerRadius="1" Width="12" Height="4" Margin="0,0,0,0">
                 <Border.RenderTransform>
                     <ScaleTransform ScaleX="1" CenterX="6"/>
                 </Border.RenderTransform>
             </Border>
         </Border>
-        <Border x:Name="BoderSettingCtrlParent" Height="60" VerticalAlignment="Top" Background="Transparent"
-                MouseEnter="BoderSettingCtrlParent_MouseEnter" MouseLeave="BoderSettingCtrlParent_MouseLeave">
-            <Border x:Name="BoderSettingCtrl" Width="150" Height="20" CornerRadius="5" Background="#66000000" Margin="0,35,0,0" VerticalAlignment="Top" >
+        <Border x:Name="BoderSettingCtrlParent" Height="60" VerticalAlignment="Top" Background="Transparent" MouseEnter="BoderSettingCtrlParent_MouseEnter" MouseLeave="BoderSettingCtrlParent_MouseLeave">
+            <Border x:Name="BoderSettingCtrl" Width="150" Height="20" CornerRadius="5" Background="#66000000" Margin="0,35,0,0" VerticalAlignment="Top">
                 <Border.RenderTransform>
                     <TranslateTransform Y="-55"/>
                 </Border.RenderTransform>
@@ -178,16 +164,15 @@
             </Grid>
         </Border>
 
-        <Border x:Name="BoderDisplayParent" Width="160" HorizontalAlignment="Left" Background="Transparent"
-                MouseEnter="BoderDisplayParent_MouseEnter" MouseLeave="BoderDisplayParent_MouseLeave">
+        <Border x:Name="BoderDisplayParent" Width="160" HorizontalAlignment="Left" Background="Transparent" MouseEnter="BoderDisplayParent_MouseEnter" MouseLeave="BoderDisplayParent_MouseLeave">
             <Border.RenderTransform>
                 <TranslateTransform X="-100"/>
             </Border.RenderTransform>
-            <Border x:Name="BoderDisplayCtrl" Width="150" Height="20" Margin="0,0,0,0" VerticalAlignment="Center" >
+            <Border x:Name="BoderDisplayCtrl" Width="150" Height="20" Margin="0,0,0,0" VerticalAlignment="Center">
                 <Border.RenderTransform>
                     <TranslateTransform X="-40"/>
                 </Border.RenderTransform>
-                <Border x:Name="BorderDisplayCtrlBack" Margin="0,0,0,0" CornerRadius="5" Background="#66000000" >
+                <Border x:Name="BorderDisplayCtrlBack" Margin="0,0,0,0" CornerRadius="5" Background="#66000000">
                     <Border.RenderTransform>
                         <RotateTransform Angle="-90" CenterX="100" CenterY="0"/>
                     </Border.RenderTransform>
@@ -196,8 +181,7 @@
                 </Border>
             </Border>
         </Border>
-        <Border x:Name="BorderImages" Background="#66000000" CornerRadius="8" Margin="10,40,0,20" HorizontalAlignment="Left" Width="220"
-                MouseLeave="HideImageDisplay" MouseEnter="ShowImageDisplay">
+        <Border x:Name="BorderImages" Background="#66000000" CornerRadius="8" Margin="10,40,0,20" HorizontalAlignment="Left" Width="220" MouseLeave="HideImageDisplay" MouseEnter="ShowImageDisplay">
             <Border.RenderTransform>
                 <TranslateTransform X="-240"/>
             </Border.RenderTransform>
@@ -224,7 +208,7 @@
                     <ControlTemplate TargetType="{x:Type ListBox}">
                         <ScrollViewer Margin="5" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
                             <WrapPanel Margin="0" Orientation="Horizontal" IsItemsHost="True" Background="Transparent">
-                                
+
                             </WrapPanel>
                         </ScrollViewer>
                     </ControlTemplate>
@@ -232,7 +216,18 @@
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Border Width="100" Height="100" CornerRadius="5" Style="{DynamicResource BorderStyle2}">
-                            <Border.Resources>                                <Style x:Key="BorderStyle2" TargetType="{x:Type Border}">                                    <Style.Triggers>                                        <Trigger Property="IsMouseOver" Value="True">                                            <Setter Property="Background" Value="#88808080"></Setter>                                        </Trigger>                                        <Trigger Property="IsMouseOver" Value="False">                                            <Setter Property="Background" Value="Transparent"></Setter>                                        </Trigger>                                    </Style.Triggers>                                </Style>                            </Border.Resources>
+                            <Border.Resources>
+                                <Style x:Key="BorderStyle2" TargetType="{x:Type Border}">
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="#88808080"></Setter>
+                                        </Trigger>
+                                        <Trigger Property="IsMouseOver" Value="False">
+                                            <Setter Property="Background" Value="Transparent"></Setter>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Border.Resources>
                             <Border Margin="5" Width="90" Height="90" CornerRadius="5" MouseLeftButtonUp="ImagesDisplay_MouseLeftButtonUp" Tag="{Binding Path=Id}">
                                 <Border.Background>
                                     <ImageBrush ImageSource="{Binding Path=ThumbsUrl}" Stretch="Fill"/>
